--- a/PDI_Practica2.ipynb
+++ b/PDI_Practica2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMPI4oqZEltdc5E1oG6qBx",
+      "authorship_tag": "ABX9TyMq+Dol5qyJwlZTG42OYRuv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7eeebb9-d83d-4e2e-e89d-39d4f7c78891"
+        "outputId": "2511d776-f3fa-456e-ab9e-95ae8034f379"
       },
       "execution_count": 1,
       "outputs": [
@@ -80,11 +80,11 @@
           "name": "stdout",
           "text": [
             "Cloning into 'PDI'...\n",
-            "remote: Enumerating objects: 19, done.\u001b[K\n",
-            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
-            "remote: Total 19 (delta 3), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (19/19), done.\n"
+            "remote: Enumerating objects: 22, done.\u001b[K\n",
+            "remote: Counting objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 22 (delta 5), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (22/22), done.\n"
           ]
         }
       ]
@@ -121,7 +121,7 @@
           "height": 0
         },
         "id": "pZ_H8yqPKVCB",
-        "outputId": "f6d84223-b454-4e98-9237-72ebdc4e2b5a"
+        "outputId": "05b80883-88e2-4df5-edae-dfb1de8ca46e"
       },
       "execution_count": 2,
       "outputs": [
@@ -129,7 +129,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb454482a10>"
+              "<matplotlib.image.AxesImage at 0x7f215f3901d0>"
             ]
           },
           "metadata": {},
@@ -215,41 +215,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def if_lighter(img_1, img_2):\n",
-        "    img_1_y = rgb2yiq(img_1)[:,:,0]\n",
-        "    img_2_y = rgb2yiq(img_2)[:,:,0]\n",
-        "    img_3 = np.zeros(img_1.shape)\n",
-        "  \n",
-        "    mask = img_1_y > img_2_y\n",
-        "    img_3[mask] = img_1[mask]\n",
-        "    \n",
-        "    mask = img_2_y >= img_1_y\n",
-        "    img_3[mask] = img_2[mask]\n",
-        "    \n",
-        "    return img_3\n",
-        "\n",
-        "def if_darker(img_1, img_2):\n",
-        "    img_1_y = rgb2yiq(img_1)[:,:,0]\n",
-        "    img_2_y = rgb2yiq(img_2)[:,:,0]\n",
-        "    img_3 = np.zeros(img_1.shape)\n",
-        "    \n",
-        "    mask = img_1_y < img_2_y\n",
-        "    img_3[mask] = img_1[mask]\n",
-        "    \n",
-        "    mask = img_2_y <= img_1_y\n",
-        "    img_3[mask] = img_2[mask]\n",
-        "    \n",
-        "    return img_3"
-      ],
-      "metadata": {
-        "id": "ZOMHHlLPu4E1"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## IF-LIGHTER / IF-DARKER"
@@ -290,7 +255,7 @@
       "metadata": {
         "id": "WXDwnq4tvcuh"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -331,19 +296,19 @@
           "height": 0
         },
         "id": "rhfKDOWSp8ZO",
-        "outputId": "853fead2-9c2a-4f2c-bbb1-0c48df13c71a"
+        "outputId": "37231a7c-bdd7-4529-f2e1-c46d4ee15535"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb453658290>"
+              "<matplotlib.image.AxesImage at 0x7f215ddced50>"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -388,19 +353,19 @@
           "height": 0
         },
         "id": "ciuxMu4qqf6X",
-        "outputId": "c42c2dac-ea17-49f3-c4b9-ae4f473e0124"
+        "outputId": "2f5f434e-82ef-40ee-ceb1-51b2f845dd3a"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb453467210>"
+              "<matplotlib.image.AxesImage at 0x7f215dbf0650>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -491,19 +456,19 @@
           "height": 251
         },
         "id": "VmGbtZdDqrRf",
-        "outputId": "e0229ad5-efe0-4eed-93dc-964808548fd3"
+        "outputId": "654aad54-e42a-4ab8-e83e-e077ae22a9fa"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb4535289d0>"
+              "<matplotlib.image.AxesImage at 0x7f215db2df10>"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -546,19 +511,19 @@
           "height": 251
         },
         "id": "ji774gJauYWn",
-        "outputId": "99bae6a3-69a2-4a76-bbd3-70e6a3a21a01"
+        "outputId": "ef4b00ee-6360-425c-acc4-e5d71f4391a3"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb450863150>"
+              "<matplotlib.image.AxesImage at 0x7f215b0ad810>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
